--- a/deploy/crds/operator.ibm.com_v1alpha1_healthservice_cr.yaml
+++ b/deploy/crds/operator.ibm.com_v1alpha1_healthservice_cr.yaml
@@ -31,6 +31,13 @@ spec:
     - -o
     - modern
     - -v
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "64Mi"
+        cpu: "500"
   healthService:
     name: system-healthcheck-service
     configmapName: system-healthcheck-service-config
@@ -55,3 +62,10 @@ spec:
     #cloudpakNameSetting: Labels/Annotations:name
     serviceNameSetting: Annotations:productName
     #dependsSetting: Labels/Annotations:name
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "64Mi"
+        cpu: "500"
